test/spec_vectors/type-rec/ok/module_16.wat
(module (rec (type $f2 (func))) (func (import "M" "f") (type $f2)))