test/spec_vectors/type-rec/fail/module_5.wat
(module (rec (type $ft (func)) (type (func))) (func $f) (global (ref $ft) (ref.func $f)))